--- a/revoluzion-mini-app/package.json
+++ b/revoluzion-mini-app/package.json
@@ -24,7 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
-    "viem": "2.23.5",
+    "viem": "^2.31.7",
     "wagmi": "^2.15.6"
   },
   "devDependencies": {
