--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@worldcoin/idkit": "^2.2.2",
     "iconoir-react": "^7.11.0",
     "next-auth": "^4.24.11",
+    "pino-pretty": "^13.0.0",
     "viem": "^2.31.7",
     "wagmi": "^2.15.6"
   }
