--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.81.5",
     "@worldcoin/idkit": "^2.2.2",
+    "ethers": "^5.8.0",
     "iconoir-react": "^7.11.0",
     "next-auth": "^4.24.11",
     "pino-pretty": "^13.0.0",
