--- a/revoluzion-mini-app/package.json
+++ b/revoluzion-mini-app/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "viem": "^2.31.7",
-    "wagmi": "^2.15.6"
+    "wagmi": "^2.15.6",
+    "ethers": "^5.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
