--- a/revoluzion-mini-app/package.json
+++ b/revoluzion-mini-app/package.json
@@ -18,6 +18,8 @@
     "@worldcoin/minikit-js": "latest",
     "@worldcoin/minikit-react": "latest",
     "clsx": "^2.1.1",
+    "ethers": "^5.8.0",
+    "flowbite-react": "^0.12.7",
     "iconoir-react": "^7.11.0",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
@@ -25,8 +27,7 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "viem": "^2.31.7",
-    "wagmi": "^2.15.6",
-    "ethers": "^5.8.0"
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
